# ChangeLog for net-p2p/dcgui-qt
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/dcgui-qt/ChangeLog,v 1.5 2003/07/13 20:28:39 aliz Exp $

*dcgui-qt-0.2.4-r1 (06 May 2003)
 
  13 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*dcgui-qt-0.2.16 (25 Jun 2003)

  25 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> dcgui-qt-0.2.16.euild :
  Version bump.

*dcgui-qt-0.2.15 (08 Jun 2003)

  17 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.15.ebuild :
  Version bump. Deleted old files.

*qt-dcgui-0.2.14 (08 Jun 2003)

  08 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.14.ebuild :
  Version bump. 

*qt-dcgui-0.2.13 (06 May 2003)

  06 May 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.13.ebuild :
  Version bump. Removed old files and renamed package.

  30 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.12.ebuild :
  Added workaround for compilation error. Closes #20177.

*qt-dcgui-0.2.12 (29 Apr 2003)

  29 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.12.ebuild :
  Version bump.

*qt-dcgui-0.2.10 (17 Apr 2003)

  17 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.10.ebuild :
  Version bump.

*qt-dcgui-0.2.9 (11 Apr 2003)

  11 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.9.ebuild :
  Version bump.

*qt-dcgui-0.2.8 (31 Mar 2003)

  31 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> qt-dcgui-0.2.8.ebuild :
  Version bump.

*qt-dcgui-0.2.7-r1 (20 Mar 2003)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> qt-dcgui-0.2.4-r1.ebuild,
  qt-dcgui-0.2.7-r1.ebuild:
  removed pic cruft

*qt-dcgui-0.2.7 (14 Mar 2003)

  14 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

*qt-dcgui-0.2.6 (09 Mar 2003)

  09 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

*qt-dcgui-0.2.5 (11 Feb 2003)

  11 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #15459.

*qt-dcgui-0.2.4 (02 Feb 2003)
