@@ -1,10 +1,13 @@
-MD5 992b76c9ebd9cc95e3355dfa184c2d26 files/dclib-0.2.4-gcc2.patch 308
-MD5 257441a8793e2c0b6849fca25911edcc files/dclib-0.2.15-gcc2.patch 318
-MD5 492f1613702a0ffba3ad78fd7f5cc265 files/digest-dclib-0.2.4 64
+MD5 0d793396fea0c2cbd05616c14a166b2a ChangeLog 3567
+MD5 f33509a7faffddc2a9e1b29295d38a58 dclib-0.2.15.ebuild 766
+MD5 109055c36a395e2a933e561a9af9d10f dclib-0.2.4.ebuild 862
+MD5 f80de130fd958847cf9a447da3e9b448 dclib-0.2.16.ebuild 764
+MD5 f80de130fd958847cf9a447da3e9b448 dclib-0.2.18.ebuild 764
 MD5 cc6c0913a4544043ba7bda1ff1e95b89 files/digest-dclib-0.2.15 65
 MD5 257441a8793e2c0b6849fca25911edcc files/dclib-0.2.16-gcc2.patch 318
+MD5 992b76c9ebd9cc95e3355dfa184c2d26 files/dclib-0.2.4-gcc2.patch 308
+MD5 257441a8793e2c0b6849fca25911edcc files/dclib-0.2.15-gcc2.patch 318
 MD5 f4016d6361280602c4070b14adf3177a files/digest-dclib-0.2.16 65
-MD5 109055c36a395e2a933e561a9af9d10f dclib-0.2.4.ebuild 862
-MD5 f33509a7faffddc2a9e1b29295d38a58 dclib-0.2.15.ebuild 766
-MD5 0d793396fea0c2cbd05616c14a166b2a ChangeLog 3567
-MD5 f80de130fd958847cf9a447da3e9b448 dclib-0.2.16.ebuild 764
+MD5 492f1613702a0ffba3ad78fd7f5cc265 files/digest-dclib-0.2.4 64
+MD5 257441a8793e2c0b6849fca25911edcc files/dclib-0.2.18-gcc2.patch 318
+MD5 fa5064f610e2eb6a03e663e9a5fb3c94 files/digest-dclib-0.2.18 65
