@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/dclib
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.27 2003/06/25 08:48:48 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.28 2003/08/21 13:42:29 aliz Exp $
+
+*dclib-0.2.18 (21 Aug 2003)
+
+  21 Aug 2003; Daniel Ahlberg <aliz@gentoo.org> dclib-0.2.18.ebuild,
+  files/dclib-0.2.18-gcc2.patch:
+  Version bump
 
 *dclib-0.2.16 (25 Jun 2003)
 
