@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/dcgui-qt
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dcgui-qt/ChangeLog,v 1.5 2003/07/13 20:28:39 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dcgui-qt/ChangeLog,v 1.6 2003/08/21 13:42:29 aliz Exp $
+
+*dcgui-qt-0.2.18 (21 Aug 2003)
+
+  21 Aug 2003; Daniel Ahlberg <aliz@gentoo.org> dcgui-qt-0.2.18.ebuild:
+  version bump
 
 *dcgui-qt-0.2.4-r1 (06 May 2003)
  
